logs/cs.app.beyonwiz.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/cs'...
Compiling './lib/python3.5/site-packages/cs/__init__.py'...
Listing './lib/python3.5/site-packages/cs/app'...
Listing './lib/python3.5/site-packages/cs/py'...
Listing './lib/python3.5/site-packages/cs/py3'...
Compiling './lib/python3.5/site-packages/cs/py3/_for2.py'...
***   File "./lib/python3.5/site-packages/cs/py3/_for2.py", line 41
    except UnicodeDecodeError, ude:
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/cs.ansi_colour-20170902.egg-info'...
Listing './lib/python3.5/site-packages/cs.app.beyonwiz-20160828.egg-info'...
Listing './lib/python3.5/site-packages/cs.debug-20171231.egg-info'...
Listing './lib/python3.5/site-packages/cs.deco-20171231.egg-info'...
Listing './lib/python3.5/site-packages/cs.env-20170905.1.egg-info'...
Listing './lib/python3.5/site-packages/cs.excutils-20170904.egg-info'...
Listing './lib/python3.5/site-packages/cs.filestate-20171231.1.egg-info'...
Listing './lib/python3.5/site-packages/cs.fileutils-20171231.1.egg-info'...
Listing './lib/python3.5/site-packages/cs.lex-20171231.egg-info'...
Listing './lib/python3.5/site-packages/cs.logutils-20171030.egg-info'...
Listing './lib/python3.5/site-packages/cs.obj-20170904.egg-info'...
Listing './lib/python3.5/site-packages/cs.pfx-20170903.1.egg-info'...
Listing './lib/python3.5/site-packages/cs.py.func-20170906.1.egg-info'...
Listing './lib/python3.5/site-packages/cs.py.stack-20160827.egg-info'...
Listing './lib/python3.5/site-packages/cs.py3-20170903.egg-info'...
Listing './lib/python3.5/site-packages/cs.queues-20160828.egg-info'...
Listing './lib/python3.5/site-packages/cs.range-20171231.egg-info'...
Listing './lib/python3.5/site-packages/cs.resources-20171024.egg-info'...
Listing './lib/python3.5/site-packages/cs.rfc2616-20160828.egg-info'...
Listing './lib/python3.5/site-packages/cs.seq-20171231.egg-info'...
Listing './lib/python3.5/site-packages/cs.threads-20160828.egg-info'...
Listing './lib/python3.5/site-packages/cs.timeutils-20150116.egg-info'...
Listing './lib/python3.5/site-packages/cs.tty-20170903.egg-info'...
Listing './lib/python3.5/site-packages/cs.upd-20170903.egg-info'...
Listing './lib/python3.5/site-packages/cs.urlutils-20160828.egg-info'...
Listing './lib/python3.5/site-packages/cs.x-20170902.egg-info'...
Listing './lib/python3.5/site-packages/lxml'...
Listing './lib/python3.5/site-packages/lxml/html'...
Listing './lib/python3.5/site-packages/lxml/includes'...
Listing './lib/python3.5/site-packages/lxml/includes/libexslt'...
Listing './lib/python3.5/site-packages/lxml/includes/libxml'...
Listing './lib/python3.5/site-packages/lxml/includes/libxslt'...
Listing './lib/python3.5/site-packages/lxml/isoschematron'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/rng'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl'...
Listing './lib/python3.5/site-packages/lxml/isoschematron/resources/xsl/iso-schematron-xslt1'...
Listing './lib/python3.5/site-packages/lxml-4.1.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
